Fix light alignment, non breaking space

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -5,15 +5,22 @@
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 1fr;
     grid-gap: 1rem;
+    justify-content: center;
 }
 
-@media (max-width: 32rem) {
+@media (max-width: 1350px) {
+    .app {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (max-width: 1000px) {
     .app {
         grid-template-columns: 1fr 1fr;
     }
 }
 
-@media (max-width: 22rem) {
+@media (max-width: 600px) {
     .app {
         grid-template-columns: 1fr;
     }
